# bazel_python_namespace_bug

./: README.md  WORKSPACE.bazel
python_projects/acme_corp/app1/: BUILD.bazel
