py_library(
    name = 'acme_corp.app1',
    imports = ['src'],
    srcs = glob(['src/acme_corp/app1/*.py']),
)

py_binary(
    name = 'app1_module1',
    srcs = ['src/acme_corp/app1/app1_module1.py'],
    main = 'src/acme_corp/app1/app1_module1.py',
    legacy_create_init=False,
    deps = [
        '//python_projects/acme_corp/lib1:acme_corp.lib1',
        ':acme_corp.app1',
    ]
)
